--- a/Position/position.css
+++ b/Position/position.css
@@ -17,11 +17,7 @@ breadcrumb locale container 面包屑 容器
 页面 详情=内容=文章article
  */
 
- .test{
-    width: 100%;
-    height: 50px;
-    background-color: blue;
- }
+
 
 
 /* 顶部 导航 容器 */
@@ -104,10 +100,8 @@ breadcrumb locale container 面包屑 容器
 
 /* 顶部 返回 */
 .top-return{
-    position: relative;
-    left: 1138px;
+    float:right;
     width: 50px;
-    display:inline-block;
     height: 25px;
     background-color: cornflowerblue;
     line-height:22px;
@@ -125,6 +119,39 @@ breadcrumb locale container 面包屑 容器
     margin-left: auto; 
 }
 /* 1920-30-1200=690 /2=345px 平均每边的margin宽度都是345 */
+
+.main-float-container{
+    width: 900px;
+    height: 270px;
+    margin-top: 20px;
+    border: 1px solid red;
+    
+}   
+.main-container-red{
+    width: 202px;
+    height: 40px;
+    background-color: rgb(231, 172, 172);
+    text-align: center;
+    line-height: 35px;
+}   
+
+.main-container-blue{
+    width: 309px;
+    height: 113px;
+    background-color: rgb(144, 233, 255);
+    text-align: center;
+    line-height: 120px;
+}   
+
+.main-container-darkbulue{
+    width: 140px;
+    height: 220px;
+    background-color: rgb(42, 16, 190);
+    text-align: center;
+    line-height: 200px;
+}  
+
+
 
 /* 主体 标题 样式 */
 .main-head{
@@ -243,31 +270,12 @@ breadcrumb locale container 面包屑 容器
     height: 300px; 
     width: 437px; 
     float: left;
-    position: relative;
 }
 
 /* 主体 登录 说明 */
 .main-explain-content{
     font-size: 14px;
     font-weight: 350;
-}
-
-.main-side-nav-container{
-    position: absolute;
-    left: 556px;
-    width: 47px;
-    height: 60px;
-    background-color: aquamarine;
-    font-size: 14px;
-    color: rgb(84, 173, 233);
-    border-top-right-radius: 11px;
-    border-bottom-left-radius: 11px;
-}
-
-.main-img-center{
-    display: inline-block;
-    margin-top: 9px;
-    margin-left: 5px;
 }
 
 
