--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,7 +14,6 @@ breadcrumb locale container 面包屑 容器
 
 页面位置 功能 文字意义
 
-页面 详情=内容=文章article
  */
 
  .test{
@@ -104,10 +103,8 @@ breadcrumb locale container 面包屑 容器
 
 /* 顶部 返回 */
 .top-return{
-    position: relative;
-    left: 1138px;
+    float:right;
     width: 50px;
-    display:inline-block;
     height: 25px;
     background-color: cornflowerblue;
     line-height:22px;
@@ -135,54 +132,48 @@ breadcrumb locale container 面包屑 容器
 }
 /* 主体 登录 容器 */
 .main-log-container{
-    height: 800px;
+    height: 460px;
     margin-top: 30px;
 }
-
-/* 主体 邀请 容器 */
-.main-invite-container{
-    margin-top: 30px;
-    height: 174px;
-    width: 366px;
-    border: 2px #eee;
-    border-style:dashed;
-    border-radius: 6px;
-    background-color: #ffffe0;
-
-}
-
-/* 主体 邀请 文章  */
-.main-invite-article{
-    display: block;
-    float: right;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    margin-right: 13px;
-    color: #337ab7;
-    font-size: 13px;
-}
-/* 主体 邀请 输入 */
-.main-invite-input{
-    width: 300px;
-    height: 27px;
-    margin-top: 5px;
-    margin-left: 31px;
-    margin-bottom: 10px;
-}
-
 /* 主体 登录 表单 */
 .main-log-from{
-    height: 300px; width: 300px; 
+    height: 300px; width: 386px; 
     float: left; 
-    margin-right: 240px;
+    margin-right: 60px;
 
 }
-/* 主体 登录 输入 */
-.main-log-input{
-    width: 360px;
-    height: 30px;
-    margin-top: 5px;
+/* 主体 内容 容器 */
+.main-content-container{
+    margin-top: 20px;
     margin-bottom: 25px;
+}
+/* 主体 消息 容器  */
+.main-message-container{
+    float: left; 
+    /* background:#eee;  */
+    width: 45px; 
+    height: 45px; 
+    margin-right: 15px;
+    border: 2px solid #ccc;
+    border-radius: 2px;
+    font-size: 12px;
+    font-weight: 400;
+
+}
+
+.clearfix-after {
+    display: table;
+    content: " ";
+    clear: both;
+}
+
+
+/* 主体 输入 title */
+.main-input-title{
+    font-size: 15px;
+    font-weight: 600;
+    color: black;
+    margin-bottom: 10px;
 }
 
 /* 主体 登录 验证 */
@@ -199,18 +190,24 @@ breadcrumb locale container 面包屑 容器
     color: #eee;
     width: 56px;
     height: 35px;
-    margin-top: 5px;
-    margin-right: 28px;
+    margin-top: 20px;
+    margin-right: 7px;
     margin-bottom: 25px;
     background-color: #337ab7;
     border-radius: 6px;
     
 }
-/* 主体 登录 单选  */
-.main-radio-container {
+/* 主体 修改 提示 */
+.main-alter-hint {
+    display: block;
     float: left;
-    margin-top: 15px;
+    color: #337ab7;
+    font-size: 13px;
+    margin-top: 29px;
+    margin-left: 20px;
 }
+
+
 
 /* 主体 登录 单选  */
 .main-log-radio {
@@ -219,6 +216,18 @@ breadcrumb locale container 面包屑 容器
     vertical-align:middle; 
     margin-top:0;
 }
+
+.main-radio {
+    font-size: 10px;
+    font-family: Tahoma;
+    vertical-align: middle;
+    margin-top: 0;
+}
+
+.main-age-button{
+    height: 30px;
+}
+
 
 /* 主体 登录 url  */
 .main-log-link {
@@ -243,7 +252,6 @@ breadcrumb locale container 面包屑 容器
     height: 300px; 
     width: 437px; 
     float: left;
-    position: relative;
 }
 
 /* 主体 登录 说明 */
@@ -252,22 +260,14 @@ breadcrumb locale container 面包屑 容器
     font-weight: 350;
 }
 
-.main-side-nav-container{
-    position: absolute;
-    left: 556px;
-    width: 47px;
-    height: 60px;
-    background-color: aquamarine;
+.main-log-button{
+    display: block;
+    float:right;
+    width: 50px;
+    height: 33px;
+    border: 1px solid #ccc;
     font-size: 14px;
-    color: rgb(84, 173, 233);
-    border-top-right-radius: 11px;
-    border-bottom-left-radius: 11px;
-}
-
-.main-img-center{
-    display: inline-block;
-    margin-top: 9px;
-    margin-left: 5px;
+    color: blue;
 }
 
 
@@ -291,4 +291,8 @@ breadcrumb locale container 面包屑 容器
     color: #337ab7;
     margin-top: 20px;
     margin-bottom: 30px;
+}
+
+a:hover{
+    color: fuchsia;
 }
